##
## Process this file with automake to produce Makefile.in
##

EXTRA_DIST = \
	ORBit.m4 \
	aa.m4 \
	codeset.m4 \
	gettext.m4 \
	glibc21.m4 \
	iconv.m4 \
	isc-posix.m4 \
	lcmessage.m4 \
	progtest.m4 \
	readline.m4 \
	curl.m4 \
	xft.m4 \
	_xine.m4


debug:

install-debug: debug

mostlyclean-generic:
	-rm -f *~ \#* .*~ .\#*


maintainer-clean-generic:
	-@echo "This command is intended for maintainers to use;"
	-@echo "it deletes files that may require special tools to rebuild."
	-rm -f Makefile.in
