##
## Process this file with automake to produce Makefile.in
##

EXTRA_DIST = gettext.m4 iconv.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 nls.m4 po.m4 progtest.m4 gettext.m4 iconv.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 nls.m4 po.m4 progtest.m4 \
	aa.m4 \
	gettext.m4 \
	iconv.m4 \
	lib-ld.m4 \
	lib-link.m4 \
	lib-prefix.m4 \
	nls.m4 \
	po.m4 \
	progtest.m4 \
	dl.m4 \
	readline.m4 \
	xft.m4 \
	_xine.m4
