EXTRA_DIST = $(visuals_DATA)

visualsdir = $(datadir)/xine/visuals

visuals_DATA = default.avi

mostlyclean-generic:
	-rm -f *~ \#* .*~ .\#*

maintainer-clean-generic:
	-@echo "This command is intended for maintainers to use;"
	-@echo "it deletes files that may require special tools to rebuild."
	-rm -f Makefile.in
