mansubdir=/es/man1
manfiles = xine.1 aaxine.1 xine-check.1 xine-remote.1
man_MANS = $(manfiles) xine-bugreport.1

EXTRA_DIST = $(manfiles) xine.1.in aaxine.1.in xine-check.1.in
DISTCLEANFILES = xine-bugreport.1

install-man1:
	$(mkinstalldirs) $(DESTDIR)$(mandir)$(mansubdir)
	@list='$(man1_MANS)'; \
	l2='$(man_MANS)'; for i in $$l2; do \
	  case "$$i" in \
	    *.1*) list="$$list $$i" ;; \
	  esac; \
	done; \
	for i in $$list; do \
	  if test -f $(srcdir)/$$i; then file=$(srcdir)/$$i; \
	  else file=$$i; fi; \
	  ext=`echo $$i | sed -e 's/^.*\\.//'`; \
	  inst=`echo $$i | sed -e 's/\\.[0-9a-z]*$$//'`; \
	  inst=`echo $$inst | sed '$(transform)'`.$$ext; \
	  echo " $(INSTALL_DATA) $$file $(DESTDIR)$(mandir)$(mansubdir)/$$inst"; \
	  $(INSTALL_DATA) $$file $(DESTDIR)$(mandir)$(mansubdir)/$$inst; \
	done

uninstall-man1:
	@list='$(man1_MANS)'; \
	l2='$(man_MANS)'; for i in $$l2; do \
	  case "$$i" in \
	    *.1*) list="$$list $$i" ;; \
	  esac; \
	done; \
	for i in $$list; do \
	  ext=`echo $$i | sed -e 's/^.*\\.//'`; \
	  inst=`echo $$i | sed -e 's/\\.[0-9a-z]*$$//'`; \
	  inst=`echo $$inst | sed '$(transform)'`.$$ext; \
	  echo " rm -f $(DESTDIR)$(mandir)$(mansubdir)/$$inst"; \
	  rm -f $(DESTDIR)$(mandir)$(mansubdir)/$$inst; \
	done

xine-bugreport.1: xine-check.1
	$(LN_S) xine-check.1 xine-bugreport.1
